// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar matches snapshot 1`] = `
<div
  className="sc-bczRLJ bQqPBP"
>
  <span
    className="sc-gsnTZi eMJLCs"
  >
    <button
      className="sc-dkzDqf eJNClO"
      onClick={[Function]}
    >
      1
    </button>
  </span>
  <span
    className="sc-gsnTZi eMJLCs"
  >
    <button
      className="sc-dkzDqf flWHKH"
      onClick={[Function]}
    >
      2
    </button>
  </span>
  <span
    className="sc-gsnTZi eMJLCs"
  >
    <button
      className="sc-dkzDqf ivFLur"
      onClick={[Function]}
    >
      3
    </button>
  </span>
  <span
    className="sc-gsnTZi eMJLCs"
  >
    <button
      className="sc-dkzDqf fUefSt"
      onClick={[Function]}
    >
      4
    </button>
  </span>
  <span
    className="sc-gsnTZi eMJLCs"
  >
    <button
      className="sc-dkzDqf fUefSt"
      onClick={[Function]}
    >
      5
    </button>
  </span>
  <span
    className="sc-gsnTZi eMJLCs"
  >
    <button
      className="sc-dkzDqf fUefSt"
      onClick={[Function]}
    >
      6
    </button>
  </span>
</div>
`;

exports[`ProgressBar matches snapshot when active step is incomplete 1`] = `
<div
  className="sc-bczRLJ bQqPBP"
>
  <span
    className="sc-gsnTZi eMJLCs"
  >
    <button
      className="sc-dkzDqf eJNClO"
      onClick={[Function]}
    >
      1
    </button>
  </span>
  <span
    className="sc-gsnTZi eMJLCs"
  >
    <button
      className="sc-dkzDqf flWHKH"
      onClick={[Function]}
    >
      2
    </button>
  </span>
  <span
    className="sc-gsnTZi eMJLCs"
  >
    <button
      className="sc-dkzDqf eJNClO"
      onClick={[Function]}
    >
      3
    </button>
  </span>
  <span
    className="sc-gsnTZi eMJLCs"
  >
    <button
      className="sc-dkzDqf gZwXnW"
      onClick={[Function]}
    >
      4
    </button>
  </span>
  <span
    className="sc-gsnTZi eMJLCs"
  >
    <button
      className="sc-dkzDqf fUefSt"
      onClick={[Function]}
    >
      5
    </button>
  </span>
  <span
    className="sc-gsnTZi eMJLCs"
  >
    <button
      className="sc-dkzDqf fUefSt"
      onClick={[Function]}
    >
      6
    </button>
  </span>
</div>
`;
